@@ -15,9 +15,9 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
+import java.util.HashMap;
+import java.util.List;
 
 import org.example.Data.MainData;
 import org.example.Utility.Utils;
@@ -25,54 +25,50 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import com.amazonaws.AmazonServiceException;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.CreateBucketRequest;
-import com.amazonaws.services.s3.model.DeleteVersionRequest;
-import com.amazonaws.services.s3.model.ObjectLockLegalHold;
-import com.amazonaws.services.s3.model.ObjectLockLegalHoldStatus;
-import com.amazonaws.services.s3.model.ObjectLockMode;
-import com.amazonaws.services.s3.model.ObjectMetadata;
-import com.amazonaws.services.s3.model.PutObjectRequest;
-import com.amazonaws.services.s3.model.SetObjectLegalHoldRequest;
+import software.amazon.awssdk.awscore.exception.AwsServiceException;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.model.ObjectLockLegalHold;
+import software.amazon.awssdk.services.s3.model.ObjectLockLegalHoldStatus;
+import software.amazon.awssdk.services.s3.model.ObjectLockMode;
 
 public class PutObject extends TestBase {
 	@org.junit.jupiter.api.BeforeAll
 	public static void beforeAll() {
-		System.out.println("PutObject SDK V2 Start");
+		System.out.println("PutObject Start");
 	}
 
 	@org.junit.jupiter.api.AfterAll
 	public static void afterAll() {
-		System.out.println("PutObject SDK V2 End");
+		System.out.println("PutObject End");
 	}
 
 	@Test
 	@Tag("PUT")
 	// 오브젝트가 올바르게 생성되는지 확인
-	public void test_bucket_list_distinct() {
+	public void testBucketListDistinct() {
 		var bucketName1 = getNewBucket();
 		var bucketName2 = getNewBucket();
 		var client = getClient();
 
-		client.putObject(bucketName1, "asdf", "str");
+		client.putObject(p -> p.bucket(bucketName1).key("foo"), RequestBody.fromString("bar"));
 
-		var response = client.listObjects(bucketName2);
-		assertEquals(0, response.getObjectSummaries().size());
+		var response = client.listObjects(l -> l.bucket(bucketName2));
+		assertEquals(0, response.contents().size());
 	}
 
 	@Test
 	@Tag("ERROR")
 	// 존재하지 않는 버킷에 오브젝트 업로드할 경우 실패 확인
-	public void test_object_write_to_nonexist_bucket() {
+	public void testObjectWriteToNonExistBucket() {
 		var key = "foo";
-		var bucketName = "whatchutalkinboutwillis";
+		var bucketName = "does-not-exist";
 		var client = getClient();
 
-		var e = assertThrows(AmazonServiceException.class, () -> client.putObject(bucketName, key, key));
+		var e = assertThrows(AwsServiceException.class, () -> client.putObject(p -> p.bucket(bucketName).key(key),
+				RequestBody.fromString("bar")));
 
-		var statusCode = e.getStatusCode();
-		var errorCode = e.getErrorCode();
+		var statusCode = e.statusCode();
+		var errorCode = e.awsErrorDetails().errorCode();
 
 		assertEquals(404, statusCode);
 		assertEquals(MainData.NoSuchBucket, errorCode);
@@ -81,78 +77,73 @@ public class PutObject extends TestBase {
 	@Test
 	@Tag("metadata")
 	// 0바이트로 업로드한 오브젝트가 실제로 0바이트인지 확인
-	public void test_object_head_zero_bytes() {
+	public void testObjectHeadZeroBytes() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
 		var key = "foo";
-		client.putObject(bucketName, key, "");
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.empty());
 
-		var response = client.getObjectMetadata(bucketName, key);
-		assertEquals(0, response.getContentLength());
+		var response = client.headObject(h -> h.bucket(bucketName).key(key));
+		assertEquals(0, response.contentLength());
 	}
 
 	@Test
 	@Tag("metadata")
 	// 업로드한 오브젝트의 ETag가 올바른지 확인
-	public void test_object_write_check_etag() {
+	public void testObjectWriteCheckEtag() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var response = client.putObject(bucketName, "foo", "bar");
-		assertEquals("37b51d194a7513e45b56f6524f2d51f2", response.getETag());
+		var response = client.putObject(p -> p.bucket(bucketName).key("foo"), RequestBody.fromString("bar"));
+		assertEquals("37b51d194a7513e45b56f6524f2d51f2", response.eTag());
 	}
 
 	@Test
 	@Tag("cacheControl")
 	// 캐시(시간)를 설정하고 업로드한 오브젝트가 올바르게 반영되었는지 확인
-	public void test_object_write_cache_control() {
+	public void testObjectWriteCacheControl() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
 		var key = "foo";
 		var body = "bar";
 		var cacheControl = "public, max-age=14400";
-		var metadata = new ObjectMetadata();
-		metadata.setCacheControl(cacheControl);
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(body.length());
+		var contentType = "text/plain";
 
-		client.putObject(bucketName, key, createBody(body), metadata);
+		client.putObject(p -> p.bucket(bucketName).key(key).cacheControl(cacheControl).contentType(contentType)
+				.contentLength((long) body.length()), RequestBody.fromString(body));
 
-		var response = client.getObjectMetadata(bucketName, key);
-		assertEquals(cacheControl, response.getCacheControl());
+		var headResponse = client.headObject(h -> h.bucket(bucketName).key(key));
+		assertEquals(cacheControl, headResponse.cacheControl());
 
-		var Result = client.getObject(bucketName, key);
-		assertEquals(body, getBody(Result.getObjectContent()));
+		var getResponse = client.getObject(g -> g.bucket(bucketName).key(key));
+		assertEquals(body, getBody(getResponse));
 	}
 
 	@Test
 	@Disabled("JAVA에서는 헤더만료일시 설정이 내부전용으로 되어있어 설정되지 않음")
 	@Tag("Expires")
 	// 캐시(날짜)를 설정하고 업로드한 오브젝트가 올바르게 반영되었는지 확인
-	public void test_object_write_expires() {
+	public void testObjectWriteExpires() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
 		var key = "foo";
 		var body = "bar";
-		var Expires = getTimeToAddSeconds(6000);
-		var metadata = new ObjectMetadata();
-		metadata.setExpirationTime(Expires);
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(body.length());
+		var expires = getTimeToAddSeconds(6000).toInstant();
 
-		client.putObject(bucketName, key, createBody(body), metadata);
+		client.putObject(p -> p.bucket(bucketName).key(key).expires(expires).contentType("text/plain")
+				.contentLength((long) body.length()), RequestBody.fromString(body));
 
-		var response = client.getObjectMetadata(bucketName, key);
-		assertEquals(Expires, response.getExpirationTime());
+		var response = client.headObject(h -> h.bucket(bucketName).key(key));
+		assertEquals(expires, response.expires());
 	}
 
 	@Test
 	@Tag("Update")
 	// 오브젝트의 기본 작업을 모드 올바르게 할 수 있는지 확인(read, write, update, delete)
-	public void test_object_write_read_update_read_delete() {
+	public void testObjectWriteReadUpdateReadDelete() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -160,30 +151,30 @@ public class PutObject extends TestBase {
 		var body = "bar";
 
 		// Write
-		client.putObject(bucketName, key, body);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(body));
 
 		// Read
-		var getResponse = client.getObject(bucketName, key);
-		var responseBody = getBody(getResponse.getObjectContent());
+		var getResponse = client.getObject(g -> g.bucket(bucketName).key(key));
+		var responseBody = getBody(getResponse);
 		assertEquals(body, responseBody);
 
 		// Update
 		var body2 = "soup";
-		client.putObject(bucketName, key, body2);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(body2));
 
 		// Read
-		getResponse = client.getObject(bucketName, key);
-		responseBody = getBody(getResponse.getObjectContent());
+		getResponse = client.getObject(g -> g.bucket(bucketName).key(key));
+		responseBody = getBody(getResponse);
 		assertEquals(body2, responseBody);
 
 		// Delete
-		client.deleteObject(bucketName, key);
+		client.deleteObject(d -> d.bucket(bucketName).key(key));
 	}
 
 	@Test
 	@Tag("metadata")
 	// 오브젝트에 메타데이터를 추가하여 업로드 할 경우 올바르게 적용되었는지 확인
-	public void test_object_set_get_metadata_none_to_good() {
+	public void testObjectSetGetMetadataNoneToGood() {
 		var value = "my";
 		var got = setGetMetadata(value, null);
 		assertEquals(value, got);
@@ -192,7 +183,7 @@ public class PutObject extends TestBase {
 	@Test
 	@Tag("metadata")
 	// 오브젝트에 빈 메타데이터를 추가하여 업로드 할 경우 올바르게 적용되었는지 확인
-	public void test_object_set_get_metadata_none_to_empty() {
+	public void testObjectSetGetMetadataNoneToEmpty() {
 		var got = setGetMetadata("", null);
 		assertEquals("", got);
 	}
@@ -200,12 +191,12 @@ public class PutObject extends TestBase {
 	@Test
 	@Tag("metadata")
 	// 메타 데이터 업데이트가 올바르게 적용되었는지 확인
-	public void test_object_set_get_metadata_overwrite_to_empty() {
+	public void testObjectSetGetMetadataOverwriteToEmpty() {
 		var bucketName = getNewBucket();
 
-		var MyMeta = "oldmata";
-		var got = setGetMetadata(MyMeta, bucketName);
-		assertEquals(MyMeta, got);
+		var myMeta = "old_meta";
+		var got = setGetMetadata(myMeta, bucketName);
+		assertEquals(myMeta, got);
 
 		got = setGetMetadata("", bucketName);
 		assertEquals("", got);
@@ -215,78 +206,76 @@ public class PutObject extends TestBase {
 	@Disabled("JAVA에서는 메타데이터에 특수문자 사용시 예외처리되어 에러가 발생하지 않음")
 	@Tag("metadata")
 	// 메타데이터에 올바르지 않는 문자열[EOF(\x04)를 사용할 경우 실패 확인
-	public void test_object_set_get_non_utf8_metadata() {
-		var metadata = "\nmymeta";
-		var e = SetGetMetadataUnreadable(metadata, null);
-		assertTrue(ErrorCheck(e.getStatusCode()));
+	public void testObjectSetGetNonUtf8Metadata() {
+		var metadata = "\nmy_meta";
+		var e = setGetMetadataUnreadable(metadata, null);
+		assertTrue(errorCheck(e.statusCode()));
 	}
 
 	@Test
 	@Disabled("JAVA에서는 메타데이터에 특수문자 사용시 예외처리되어 에러가 발생하지 않음")
 	@Tag("metadata")
 	// 메타데이터에 올바르지 않는 문자[EOF(\x04)를 문자열 맨앞에 사용할 경우 실패 확인
-	public void test_object_set_get_metadata_empty_to_unreadable_prefix() {
+	public void testObjectSetGetMetadataEmptyToUnreadablePrefix() {
 		var metadata = "\nw";
-		var e = SetGetMetadataUnreadable(metadata, null);
-		assertTrue(ErrorCheck(e.getStatusCode()));
+		var e = setGetMetadataUnreadable(metadata, null);
+		assertTrue(errorCheck(e.statusCode()));
 	}
 
 	@Test
 	@Disabled("JAVA에서는 메타데이터에 특수문자 사용시 예외처리되어 에러가 발생하지 않음")
 	@Tag("metadata")
 	// 메타데이터에 올바르지 않는 문자[EOF(\x04)를 문자열 맨뒤에 사용할 경우 실패 확인
-	public void test_object_set_get_metadata_empty_to_unreadable_suffix() {
+	public void testObjectSetGetMetadataEmptyToUnreadableSuffix() {
 		var metadata = "h\n";
-		var e = SetGetMetadataUnreadable(metadata, null);
-		assertTrue(ErrorCheck(e.getStatusCode()));
+		var e = setGetMetadataUnreadable(metadata, null);
+		assertTrue(errorCheck(e.statusCode()));
 	}
 
 	@Test
 	@Tag("metadata")
 	// 오브젝트를 메타데이타 없이 덮어쓰기 했을 때, 메타데이타 값이 비어있는지 확인
-	public void test_object_metadata_replaced_on_put() {
+	public void testObjectMetadataReplacedOnPut() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
 		var body = "bar";
 
-		var metadata = new ObjectMetadata();
-		metadata.addUserMetadata("x-amz-meta-mata1", "bar");
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(body.length());
+		var metadata = new HashMap<String, String>();
+		metadata.put("x-amz-meta-meta1", "bar");
 
-		client.putObject(bucketName, key, createBody(body), metadata);
-		client.putObject(bucketName, key, body);
+		client.putObject(p -> p.bucket(bucketName).key(key).contentType("text/plain").metadata(metadata),
+				RequestBody.fromString(body));
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(body));
 
-		var response = client.getObject(bucketName, key);
-		var got = response.getObjectMetadata().getUserMetadata();
-		assertEquals(0, got.size());
+		var response = client.getObject(g -> g.bucket(bucketName).key(key));
+		assertEquals(0, response.response().metadata().size());
 	}
 
 	@Test
-	@Tag("Incoding")
+	@Tag("Encoding")
 	// body의 내용을utf-8로 인코딩한 오브젝트를 업로드 했을때 올바르게 업로드 되었는지 확인
-	public void test_object_write_file() {
+	public void testObjectWriteFile() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
-		var data_str = "bar";
-		var data = new String(data_str.getBytes(), StandardCharsets.US_ASCII);
+		var dataStr = "bar";
+		var data = new String(dataStr.getBytes(), StandardCharsets.US_ASCII);
 
-		client.putObject(bucketName, key, data);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(data));
 
-		var response = client.getObject(bucketName, key);
-		var body = getBody(response.getObjectContent());
-		assertEquals(data_str, body);
+		var response = client.getObject(g -> g.bucket(bucketName).key(key));
+		var body = getBody(response);
+		assertEquals(dataStr, body);
 	}
 
 	@Test
 	@Tag("SpecialKeyName")
 	// 오브젝트 이름과 내용이 모두 특수문자인 오브젝트 여러개를 업로드 할 경우 모두 재대로 업로드 되는지 확인
-	public void test_bucket_create_special_key_names() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "-", "_", ".", "'", "("+")", "&", "$", "@", "=", ";", "/", ":", "+", "  ", ",", "?", "\\", "{"+"}", "^", "%", "`", "["+"]", "<" + ">", "~", "#", "|"}));
-				
+	public void testBucketCreateSpecialKeyNames() {
+		var keys = List.of("!", "-", "_", ".", "'", "(" + ")", "&", "$", "@", "=", ";", "/", ":", "+", "  ", ",", "?",
+				"\\", "{" + "}", "^", "%", "`", "[" + "]", "<" + ">", "~", "#", "|");
+
 		var bucketName = createObjects(keys);
 
 		var objects = getObjectList(bucketName, null);
@@ -295,25 +284,24 @@ public class PutObject extends TestBase {
 
 		for (var key : keys) {
 			assertTrue(objects.contains(key));
-			var response = client.getObject(bucketName, key);
-			var body = getBody(response.getObjectContent());
+			var response = client.getObject(g -> g.bucket(bucketName).key(key));
+			var body = getBody(response);
 			assertEquals(key, body);
-			client.setObjectAcl(bucketName, key, CannedAccessControlList.Private);
 		}
 	}
 
 	@Test
 	@Tag("SpecialKeyName")
 	// [_], [/]가 포함된 이름을 가진 오브젝트를 업로드 한뒤 prefix정보를 설정한 GetObjectList가 가능한지 확인
-	public void test_bucket_list_special_prefix() {
-		var keys = new ArrayList<>(Arrays.asList(new String[] { "_bla/1", "_bla/2", "_bla/3", "_bla/4", "abcd" }));
+	public void testBucketListSpecialPrefix() {
+		var keys = List.of("Bla/1", "Bla/2", "Bla/3", "Bla/4", "abcd");
 
 		var bucketName = createObjects(keys);
 
 		var objects = getObjectList(bucketName, null);
 		assertEquals(5, objects.size());
 
-		objects = getObjectList(bucketName, "_bla/");
+		objects = getObjectList(bucketName, "Bla/");
 		assertEquals(4, objects.size());
 	}
 
@@ -321,10 +309,10 @@ public class PutObject extends TestBase {
 	@Tag("Lock")
 	// [버킷의 Lock옵션을 활성화] LegalHold와 Lock유지기한을 설정하여 오브젝트 업로드할 경우 설정이 적용되는지 메타데이터를 통해
 	// 확인
-	public void test_object_lock_uploading_obj() {
+	public void testObjectLockUploadingObj() {
 		var bucketName = getNewBucketName();
 		var client = getClient();
-		client.createBucket(new CreateBucketRequest(bucketName).withObjectLockEnabledForBucket(true));
+		client.createBucket(c -> c.bucket(bucketName).objectLockEnabledForBucket(true));
 
 		var key = "file1";
 		var body = "abc";
@@ -332,231 +320,187 @@ public class PutObject extends TestBase {
 		var days = Calendar.getInstance();
 		days.set(2030, 1, 1, 0, 0, 0);
 
-		var metadata = new ObjectMetadata();
-		metadata.setContentMD5(md5);
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(body.length());
+		var putResponse = client.putObject(p -> p
+				.bucket(bucketName)
+				.key(key)
+				.contentMD5(md5)
+				.contentType("text/plain")
+				.contentLength((long) body.length())
+				.objectLockMode(ObjectLockMode.GOVERNANCE)
+				.objectLockRetainUntilDate(days.toInstant())
+				.objectLockLegalHoldStatus(ObjectLockLegalHoldStatus.ON),
+				RequestBody.fromString(body));
 
-		var PutResponse = client.putObject(new PutObjectRequest(bucketName, key, createBody(body), metadata)
-				.withObjectLockMode(ObjectLockMode.GOVERNANCE).withObjectLockRetainUntilDate(days.getTime())
-				.withObjectLockLegalHoldStatus(ObjectLockLegalHoldStatus.ON));
+		var response = client.headObject(h -> h.bucket(bucketName).key(key));
+		assertEquals(ObjectLockMode.GOVERNANCE.toString(), response.objectLockMode());
+		assertEquals(days.toInstant(), response.objectLockRetainUntilDate());
+		assertEquals(ObjectLockLegalHoldStatus.ON.toString(), response.objectLockLegalHoldStatus());
 
-		var response = client.getObjectMetadata(bucketName, key);
-		assertEquals(ObjectLockMode.GOVERNANCE.toString(), response.getObjectLockMode());
-		assertEquals(days.getTime(), response.getObjectLockRetainUntilDate());
-		assertEquals(ObjectLockLegalHoldStatus.ON.toString(), response.getObjectLockLegalHoldStatus());
-
-		var legalHold = new ObjectLockLegalHold().withStatus(ObjectLockLegalHoldStatus.OFF);
-		client.setObjectLegalHold(
-				new SetObjectLegalHoldRequest().withBucketName(bucketName).withKey(key).withLegalHold(legalHold));
-		client.deleteVersion(new DeleteVersionRequest(bucketName, key, PutResponse.getVersionId())
-				.withBypassGovernanceRetention(true));
+		var legalHold = ObjectLockLegalHold.builder().status(ObjectLockLegalHoldStatus.OFF).build();
+		client.putObjectLegalHold(p -> p.bucket(bucketName).key(key).legalHold(legalHold));
+		client.deleteObject(
+				d -> d.bucket(bucketName).key(key).versionId(putResponse.versionId()).bypassGovernanceRetention(true));
 	}
 
 	@Test
 	@Tag("Space")
 	// 오브젝트의 중간에 공백문자가 들어갔을 경우 올바르게 동작하는지 확인
-	public void test_object_infix_space() {
-		var keys = new ArrayList<>(Arrays.asList(new String[] { "a a/", "b b/f1", "c/f 2", "d d/f 3" }));
+	public void testObjectInfixSpace() {
+		var keys = List.of("a a/", "b b/f1", "c/f 2", "d d/f 3");
 		var bucketName = createObjectsToBody(keys, "");
 		var client = getClient();
 
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		var getKeys = getKeys(response.contents());
 
-		assertEquals(keys, Keys);
+		assertEquals(keys, getKeys);
 	}
 
 	@Test
 	@Tag("Space")
 	// 오브젝트의 마지막에 공백문자가 들어갔을 경우 올바르게 동작하는지 확인
-	public void test_object_suffix_space() {
-		var keys = new ArrayList<>(Arrays.asList(new String[] { "a /", "b /f1", "c/f2 ", "d /f3 " }));
+	public void testObjectSuffixSpace() {
+		var keys = List.of("a /", "b /f1", "c/f2 ", "d /f3 ");
 		var bucketName = createObjectsToBody(keys, "");
 		var client = getClient();
 
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		var getKeys = getKeys(response.contents());
 
-		assertEquals(keys, Keys);
+		assertEquals(keys, getKeys);
 	}
 
 	@Test
 	@Tag("SpecialCharacters")
-	// [SignatureVersion2] 특수문자를 포함한 비어있는 오브젝트 업로드 성공 확인
-	public void test_put_empty_object_signature_version_2() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(","(/","(/(", ")",")/",")/)", "*","*/","*/*", ":",":/",":/:", "[","[/","[/[", "]", "]/", "]/]" }));
-		var bucketName = createObjectsToBodyV2(keys, "");
-		var client = getClientV2();
-
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
-
-		assertEquals(keys, Keys);
-	}
-
-	@Test
-	@Tag("SpecialCharacters")
-	// [SignatureVersion4] 특수문자를 포함한 비어있는 오브젝트 업로드 성공 확인
-	public void test_put_empty_object_signature_version_4() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(","(/","(/(", ")",")/",")/)", "*","*/","*/*", ":",":/",":/:", "[","[/","[/[", "]", "]/", "]/]" }));
-		var bucketName = createObjectsToBodyV4(keys, "", true);
-		var client = getClientV4(true);
-
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
-
-		assertEquals(keys, Keys);
-	}
-
-	@Test
-	@Tag("SpecialCharacters")
-	// [SignatureVersion2] 특수문자를 포함한 오브젝트 업로드 성공 확인
-	public void test_put_object_signature_version_2() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(","(/","(/(", ")",")/",")/)", "*","*/","*/*", ":",":/",":/:", "[","[/","[/[", "]", "]/", "]/]" }));
-		var bucketName = createObjectsV2(keys);
-		var client = getClientV2();
-
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
-
-		assertEquals(keys, Keys);
-	}
-
-	@Test
-	@Tag("SpecialCharacters")
-	// [SignatureVersion4] 특수문자를 포함한 오브젝트 업로드 성공 확인
-	public void test_put_object_signature_version_4() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(","(/","(/(", ")",")/",")/)", "*","*/","*/*", ":",":/",":/:", "[","[/","[/[", "]", "]/", "]/]" }));
-		var bucketName = createObjectsV4(keys, true);
-		var client = getClientV4(true);
-
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
-
-		assertEquals(keys, Keys);
-	}
-
-	@Test
-	@Tag("Encoding")
-	// [SignatureVersion4, UseChunkEncoding = true] 특수문자를 포함한 오브젝트 업로드 성공 확인
-	public void test_put_object_use_chunk_encoding() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(","(/","(/(", ")",")/",")/)", "*","*/","*/*", ":",":/",":/:", "[","[/","[/[", "]", "]/", "]/]" }));
-		var bucketName = createObjectsV4(keys, true);
-		var client = getClientV4(true);
-
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
-
-		assertEquals(keys, Keys);
-	}
-
-	@Test
-	@Tag("Encoding")
-	// [SignatureVersion4, UseChunkEncoding = true, DisablePayloadSigning = true]
 	// 특수문자를 포함한 오브젝트 업로드 성공 확인
-	public void test_put_object_use_chunk_encoding_and_disable_payload_signing() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(","(/","(/(", ")",")/",")/)", "*","*/","*/*", ":",":/",":/:", "[","[/","[/[", "]", "]/", "]/]" }));
-		var bucketName = createObjectsHttps(keys, true, true);
-		var client = getClientV4(true);
+	public void testPutObjectSpecialCharacters() {
+		var keys = List.of("!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(", "(/", "(/(",
+				")", ")/", ")/)", "*", "*/", "*/*", ":", ":/", ":/:", "[", "[/", "[/[", "]", "]/", "]/]");
+		var bucketName = createObjects(keys);
+		var client = getClient(true);
 
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		var getKeys = getKeys(response.contents());
 
-		assertEquals(keys, Keys);
+		assertEquals(keys, getKeys);
 	}
 
 	@Test
 	@Tag("Encoding")
-	// [SignatureVersion4, UseChunkEncoding = false] 특수문자를 포함한 오브젝트 업로드 성공 확인
-	public void test_put_object_not_chunk_encoding() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(","(/","(/(", ")",")/",")/)", "*","*/","*/*", ":",":/",":/:", "[","[/","[/[", "]", "]/", "]/]" }));
-		var bucketName = createObjectsV4(keys, false);
-		var client = getClientV4(false);
+	// [UseChunkEncoding = true] 특수문자를 포함한 오브젝트 업로드 성공 확인
+	public void testPutObjectSpecialCharactersUseChunkEncoding() {
+		var keys = List.of("!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(", "(/", "(/(",
+				")", ")/", ")/)", "*", "*/", "*/*", ":", ":/", ":/:", "[", "[/", "[/[", "]", "]/", "]/]");
+		var bucketName = createObjects(keys, true);
+		var client = getClient(true);
 
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		var getKeys = getKeys(response.contents());
 
-		assertEquals(keys, Keys);
+		assertEquals(keys, getKeys);
 	}
 
 	@Test
 	@Tag("Encoding")
-	// [SignatureVersion4, UseChunkEncoding = false, DisablePayloadSigning = true]
+	// [UseChunkEncoding = true, DisablePayloadSigning = true]
 	// 특수문자를 포함한 오브젝트 업로드 성공 확인
-	public void test_put_object_not_chunk_encoding_and_disable_payload_signing() {
-		var keys = new ArrayList<>(
-				Arrays.asList(new String[] { "!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(","(/","(/(", ")",")/",")/)", "*","*/","*/*", ":",":/",":/:", "[","[/","[/[", "]", "]/", "]/]" }));
-		var bucketName = createObjectsHttps(keys, false, true);
-		var client = getClientV4(false);
+	public void testPutObjectUseSpecialCharactersChunkEncodingAndDisablePayloadSigning() {
+		var keys = List.of("!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(", "(/", "(/(",
+				")", ")/", ")/)", "*", "*/", "*/*", ":", ":/", ":/:", "[", "[/", "[/[", "]", "]/", "]/]");
+		var bucketName = createObjectsHttps(keys, true);
+		var client = getClient(true);
 
-		var response = client.listObjects(bucketName);
-		var Keys = getKeys(response.getObjectSummaries());
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		var getKeys = getKeys(response.contents());
 
-		assertEquals(keys, Keys);
+		assertEquals(keys, getKeys);
+	}
+
+	@Test
+	@Tag("Encoding")
+	// [UseChunkEncoding = false] 특수문자를 포함한 오브젝트 업로드 성공 확인
+	public void testPutObjectSpecialCharactersNotChunkEncoding() {
+		var keys = List.of("!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(", "(/", "(/(",
+				")", ")/", ")/)", "*", "*/", "*/*", ":", ":/", ":/:", "[", "[/", "[/[", "]", "]/", "]/]");
+		var bucketName = createObjects(keys, false);
+		var client = getClient(false);
+
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		var getKeys = getKeys(response.contents());
+
+		assertEquals(keys, getKeys);
+	}
+
+	@Test
+	@Tag("Encoding")
+	// [UseChunkEncoding = false, DisablePayloadSigning = true]
+	// 특수문자를 포함한 오브젝트 업로드 성공 확인
+	public void testPutObjectSpecialCharactersNotChunkEncodingAndDisablePayloadSigning() {
+		var keys = List.of("!", "!/", "!/!", "$", "$/", "$/$", "'", "'/", "'/'", "(", "(/", "(/(",
+				")", ")/", ")/)", "*", "*/", "*/*", ":", ":/", ":/:", "[", "[/", "[/[", "]", "]/", "]/]");
+		var bucketName = createObjectsHttps(keys, false);
+		var client = getClient(false);
+
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		var getKeys = getKeys(response.contents());
+
+		assertEquals(keys, getKeys);
 	}
 
 	@Test
 	@Tag("Directory")
 	// 폴더의 이름과 동일한 오브젝트 업로드가 가능한지 확인
-	public void test_put_object_dir_and_file() {
+	public void testPutObjectDirAndFile() {
 		// file first
 		var bucketName = getNewBucket();
 		var key = "aaa";
 		var directoryName = "aaa/";
 		var client = getClient();
 
-		client.putObject(bucketName, key, key);
-		client.putObject(bucketName, directoryName, "");
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(key));
+		client.putObject(p -> p.bucket(bucketName).key(directoryName), RequestBody.empty());
 
-		var response = client.listObjects(bucketName);
-		var keys = getKeys(response.getObjectSummaries());
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		var keys = getKeys(response.contents());
 		assertEquals(2, keys.size());
 
 		// dir first
 		var bucketName2 = getNewBucket();
 
-		client.putObject(bucketName2, directoryName, "");
-		client.putObject(bucketName2, key, key);
+		client.putObject(p -> p.bucket(bucketName2).key(directoryName), RequestBody.empty());
+		client.putObject(p -> p.bucket(bucketName2).key(key), RequestBody.fromString(key));
 
-		response = client.listObjects(bucketName2);
-		keys = getKeys(response.getObjectSummaries());
+		response = client.listObjects(l -> l.bucket(bucketName2));
+		keys = getKeys(response.contents());
 		assertEquals(2, keys.size());
 
 		// etc
 		var bucketName3 = getNewBucket();
 		var newKey = "aaa/bbb/ccc";
 
-		client.putObject(bucketName3, key, key);
-		client.putObject(bucketName3, newKey, newKey);
+		client.putObject(p -> p.bucket(bucketName3).key(key), RequestBody.fromString(key));
+		client.putObject(p -> p.bucket(bucketName3).key(newKey), RequestBody.fromString(newKey));
 
-		response = client.listObjects(bucketName3);
-		keys = getKeys(response.getObjectSummaries());
+		response = client.listObjects(l -> l.bucket(bucketName3));
+		keys = getKeys(response.contents());
 		assertEquals(2, keys.size());
 	}
 
 	@Test
 	@Tag("Overwrite")
 	// 오브젝트를 덮어쓰기 했을때 올바르게 반영되는지 확인
-	public void test_object_overwrite() {
+	public void testObjectOverwrite() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "temp";
 		var content1 = Utils.randomTextToLong(10 * MainData.KB);
 		var content2 = Utils.randomTextToLong(1 * MainData.MB);
 
-		client.putObject(bucketName, key, content1);
-		client.putObject(bucketName, key, content2);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(content1));
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(content2));
 
-		var response = client.getObject(bucketName, key);
-		var body = getBody(response.getObjectContent());
+		var response = client.getObject(g -> g.bucket(bucketName).key(key));
+		var body = getBody(response);
 
 		assertEquals(content2.length(), body.length());
 		assertTrue(content2.equals(body), MainData.NOT_MATCHED);
@@ -565,39 +509,39 @@ public class PutObject extends TestBase {
 	@Test
 	@Tag("PUT")
 	// 오브젝트 이름에 이모지가 포함될 경우 올바르게 업로드 되는지 확인
-	public void test_object_emoji() {
+	public void testObjectEmoji() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "test❤🍕🍔🚗";
 
-		client.putObject(bucketName, "asdf", key);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(key));
 
-		var response = client.listObjects(bucketName);
-		assertEquals(1, response.getObjectSummaries().size());
+		var response = client.listObjects(l -> l.bucket(bucketName));
+		assertEquals(1, response.contents().size());
 	}
-	
+
 	@Test
 	@Tag("metadata")
 	// 메타데이터에 utf-8이 포함될 경우 올바르게 업로드 되는지 확인
-	public void test_object_set_get_metadata_utf8() {
+	public void testObjectSetGetMetadataUtf8() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
-		var MetadataKey1 = "x-amz-meta-meta1";
-		var MetadataKey2 = "x-amz-meta-meta2";
+		var metadataKey1 = "x-amz-meta-meta1";
+		var metadataKey2 = "x-amz-meta-meta2";
 		var metadata1 = "utf-8";
 		var metadata2 = "UTF-8";
-		var ContentType = "text/plain; charset=UTF-8";
-		var MetadataList = new ObjectMetadata();
-		MetadataList.addUserMetadata(MetadataKey1, metadata1);
-		MetadataList.addUserMetadata(MetadataKey2, metadata2);
-		MetadataList.setContentType(ContentType);
+		var contentType = "text/plain; charset=UTF-8";
+		var metadata = new HashMap<String, String>();
+		metadata.put(metadataKey1, metadata1);
+		metadata.put(metadataKey2, metadata2);
 
-		client.putObject(bucketName, key, createBody("bar"), MetadataList);
+		client.putObject(p -> p.bucket(bucketName).key(key).contentType(contentType).metadata(metadata),
+				RequestBody.fromString("bar"));
 
-		var response = client.getObjectMetadata(bucketName, key);
-		assertEquals(metadata1, response.getUserMetaDataOf(MetadataKey1));
-		assertEquals(metadata2, response.getUserMetaDataOf(MetadataKey2));
+		var response = client.headObject(h -> h.bucket(bucketName).key(key));
+		assertEquals(metadata1, response.metadata().get(metadataKey1));
+		assertEquals(metadata2, response.metadata().get(metadataKey2));
 
 	}
 }
